Registration form added

--- a/form tag/demo9.html
+++ b/form tag/demo9.html
@@ -40,9 +40,9 @@
             </tr>
             <tr>
                <td></td>
-               <td><input type="submit" value="Register">
+               <td><input type="submit" value="Register" style="background-color: dodgerblue;color:white">
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-               <input type="submit"></td>
+               <input type="submit" style="background-color: dodgerblue;color:white"></td>
             </tr>
          </table>
       </form>
